added gif export
